--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/main.css
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/main.css
@@ -1,3 +1,12 @@
 ﻿body {
-    background-color: red;
+    background-color: lightgray;
+    width: 100%;
+}
+
+.page {
+    width: 880px;
+    margin: 10px auto;
+    background-color: white;
+    min-height: 500px;
+    padding: 10px;
 }
