--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/main.css
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/main.css
@@ -1,12 +1,70 @@
 ﻿body {
-    background-color: lightgray;
+    background-color: #AAAAAA;
     width: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .page {
-    width: 880px;
-    margin: 10px auto;
+    width: 900px;
+    margin: 20px auto;
     background-color: white;
     min-height: 500px;
-    padding: 10px;
+}
+
+.left {
+    width: 175px;
+    float: left;
+    height: 100%;
+}
+
+h1 {
+    padding: 20px 10px 20px 10px;
+    background-color: #DDDDDD;
+    margin: 0;
+    border-bottom: 1px solid black;
+}
+
+.right {
+    display: inline-block;
+    padding: 0 20px;
+}
+
+ul{
+    text-decoration: none;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+ul li {
+
+}
+
+ul li a {
+    text-decoration: none;
+    border-bottom: 1px solid black;
+    padding: 5px 10px;
+    display: inline-block;
+    width: calc(100% - 32px);
+    color: #333333;
+}
+
+ul li a:hover {
+    background-color: lightgray;
+}
+
+.image-text {
+    color:darkgray;
+    margin-bottom: 10px;
+    margin-top: -4px;
+    font-size: 0.8em;
+    font-style: italic;
+}
+
+.footer {
+    text-align: center;
+    padding: 50px 0;
+    color: white;
+    background-color: #333333;
+    margin-top: 20px;
 }
