--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/main.css
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/main.css
@@ -54,7 +54,7 @@ ul li a:hover {
 }
 
 .image-text {
-    color:darkgray;
+    color: #555555;
     margin-bottom: 10px;
     margin-top: -4px;
     font-size: 0.8em;
@@ -67,4 +67,8 @@ ul li a:hover {
     color: white;
     background-color: #333333;
     margin-top: 20px;
+}
+
+img {
+    width: 500px;
 }
