--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Grid/main.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Grid/main.css
@@ -19,6 +19,7 @@
     width: calc(100% - 2px);
     height: calc(100% - 2px);
     border:1px solid red;
+    position: relative;
 }
 
 /* Dividers*/
