implemented basic layered canvas

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
@@ -204,3 +204,7 @@ span.table-resize{
 .menu-window ul li a:hover{
     background-color: #29292D;
 }
+
+.plotCanvas {    
+    position: absolute;    
+}
