--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Grid/grid.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Grid/grid.css
@@ -1,30 +1,13 @@
-/*Global things for reseting to fullscreen*/
-/*html{
-    margin: 0;
-    height: 100%;
-}*/
-/*body{
-    margin: 0;
-    height: 100%;
-    background-color: lightgreen;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-}*/
-
-
 /*Application window*/
 .grid-window{
     width: calc(100%);
     height: calc(100%);
-    /*border:1px solid red;*/
     position: relative;
 }
 
 /* Dividers*/
 .grid-hdiv, .grid-vdiv{
-    background-color: #ff9103;
+    /*background-color: #ff9103;*/
 }
 .grid-vdiv{
     width: 100%;
@@ -50,7 +33,6 @@
     display: flex;
     width: calc(100% - 0px);
     height: calc(100% - 0px);
-    /*position: relative;*/
     margin: 0;
     padding: 0;
     user-select: none;
@@ -67,12 +49,13 @@
 
 .dock-selector{
     display: flex;
-    border: 1px solid black;
     width: calc(100% - 2px);
     height: calc(100% - 2px);
     flex-flow: wrap;
     border-radius: 30px;
-    background: lightgrey;
+
+    /*border: 1px solid black;
+    background: lightgrey;*/
 }
 .dock-item{
     width: 30px;
@@ -81,20 +64,21 @@
 .dock-active{
     width: 28px;
     height: 28px;
-    border: 1px solid black;
-    background-color: cadetblue;
+
+    /*border: 1px solid black;
+    background-color: cadetblue;*/
 }
 .dock-active:hover .dock-up, 
 .dock-active:hover .dock-down,
 .dock-active:hover .dock-left,
 .dock-active:hover .dock-right{
-    background: #333333;
+    /*background: #333333;*/
 }
 .dock-up, 
 .dock-down, 
 .dock-left, 
 .dock-right{
-    background-color: #636363;
+    /*background-color: #636363;*/
     position: relative;
 }
 .dock-up, .dock-down{
