--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
@@ -19,6 +19,20 @@
     box-shadow: 0 0 8px 2px #111111;
 }
 
+.window-body-wrapper {
+    position: relative;
+}
+
+.window-overlay {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background: rgba(0,0,203,0.5);
+}
+
 .window-title {
     color: #009F99;
 }
