fixed some table color

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Grid/grid-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Grid/grid-style.css
@@ -1,6 +1,7 @@
 /* Dividers*/
 .grid-hdiv, .grid-vdiv{
-    background-color: #ff9103;
+    /*background-color: #ff9103;*/
+    background-color: #000000;
 }
 
 /*Containers*/
