--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
@@ -232,3 +232,10 @@ span.table-resize{
 .plot-wrapper {
     position: relative;
 }
+
+.label-controller {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+}
