Added autoscroll to linechart

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
@@ -110,16 +110,12 @@ span.table-resize{
     background-color: #29292D;
 }
 
-.plot-canvas {    
-    
-}
-
 .gauge-plot {
     color: darkgray;
     /* needle color */    
     border-color: red;
 }
 
-.bar-controller {
-    background-color: green;
+.plot-wrapper {
+    background-color: rgb(45, 45, 45);
 }
