--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
@@ -36,7 +36,7 @@
 }
 
 .window-header {
-    background-color: #00B8C8;
+    background-color: #119ed9;
     color: black;
     border-radius: 1px 1px 0 0;
     border-bottom: 1px solid rgb(107, 107, 107);
