some more color work

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
@@ -118,10 +118,13 @@ span.table-resize{
 
 /*  Controllers  */
 
-.gauge-plot {
+.gauge {
+    /*  ring and labels  */
     color: darkgray;
     /* needle color */    
     border-color: red;
+    /*  center  */
+    background-color: darkgray;
 }
 
 .line-chart {
