--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style-dark.css
@@ -13,7 +13,7 @@
 }
 
 .window {
-    background-color: white;
+    /*background-color: white;*/
     /*background-color: #262626;
     color: white;*/
     border-radius: 4px 4px 0 0;
