--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
@@ -2,13 +2,16 @@
     outline: none;
 }
 
-html{
+html {
     width: 100%;
     height: 100%;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
+  
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */    
 }
 
 body {
@@ -70,10 +73,11 @@ body {
 
 .window-body{
     overflow: auto;
-    -moz-user-select: initial;
+    /*-moz-user-select: initial;
     -ms-user-select: initial;
     -webkit-user-select: initial;
-    user-select: initial;
+    user-select: initial;*/
+    cursor: default;
 }
 
 .window-control{
@@ -252,14 +256,6 @@ span.table-resize{
 
 .bar-controller-barWrapper2 {
     flex-grow: 1;    
-}
-
-.bar-controller-bar1 {
-    background-color: blue;
-}
-
-.bar-controller-bar2 {
-    background-color: red;    
 }
 
 .steeringWheel-wrapper {
