--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app.css
@@ -84,16 +84,14 @@ body {
 }
 
 .window-control-exit {
-    margin-right: 5px;
-    font-size: 15px;
 }
 
 .window-control span {
-    padding: 3px 6px;
+    padding: 3px 0px;
     display: inline-block;
-    width: 15px;
+    width: 40px;
     text-align: center;
-    border-radius: 20px;
+    /*border-radius: 20px;*/
 }
 
 /*.window-control span:hover {
