Added new components, and switched TaskManager over to new TableList

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style-dark.css
@@ -76,7 +76,9 @@
     background-color: #313C53;
 
 }
-
+.table {
+    color: white;
+}
 
 .table tr:nth-child(2n) {
     background-color: #3c3c3c;
