Fixed correctring color on action icons in window

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style-dark.css
@@ -50,6 +50,10 @@
     border-bottom: none;
 }
 
+.info-color {
+    stroke: white;
+}
+
 .window-control{
     font-family: 'Global Monospace';
     font-size: 18px;
