--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
@@ -46,6 +46,10 @@
     border-bottom: 1px solid rgb(107, 107, 107);
 }
 
+.info-color {
+    stroke: black;
+}
+
 .window-control{
     font-family: 'Global Monospace';
     font-size: 18px;
