--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/app-style.css
@@ -3,8 +3,14 @@
     font-family: 'Segoe UI', sans-serif;
 }
 
-.background{
-    background: none;
+.background {
+    /*background: none;*/
+    background: url(IonLogo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 75%;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%) brightness(150%);
 }
 
 /*  Window  */
