--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
@@ -1,26 +1,23 @@
 ﻿body {
-    background-color: rgb(240, 240, 240);
+    background-color: #262626;
     font-family: 'Segoe UI', sans-serif;
+    /*background: radial-gradient(circle, #202020 40%, #000000 90%);*/
 }
 
-.background {
-    /*background: none;*/
-    background: url(IonLogo.png);
+
+.background{
+    background: url(/Icons/IonLogo.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: auto 75%;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%) brightness(150%);
 }
 
-/*  Window  */
-
 .window {
-    
+    /*background-color: white;*/
     /*background-color: #262626;
     color: white;*/
     border-radius: 4px 4px 0 0;
-    box-shadow: 0 0 8px 2px rgba(17, 17, 17, 0.3);
+    box-shadow: 0 0 8px 2px #111111;
 }
 
 .window-body-wrapper {
@@ -28,8 +25,8 @@
 }
 
 .window-body {
-    background-color: rgb(245, 245, 245);
-    color: #202020;
+    background-color: #2d2d2d;
+    color: white;
 }
 
 .window-overlay {
@@ -39,22 +36,23 @@
     width: 100%;
     height: 100%;
     display: none;
-    background: rgba(160, 164, 184, 0.3);
+    background: rgba(0,0,180,0.1);
 }
 
 .window-title {
-    color: black;
+    color: #009F99;
 }
 
 .window-header {
-    background-color: #119ed9;
-    color: black;
+    background-color: #1A1A1A;
+    color: white;
     border-radius: 1px 1px 0 0;
-    border-bottom: 1px solid rgb(107, 107, 107);
+    border-bottom: none;
+    border-bottom: 1px solid #1A1A1A;
 }
 
 .info-color {
-    stroke: black;
+    stroke: white;
 }
 
 .window-control{
@@ -63,14 +61,12 @@
 }
 
 .window-control span:hover {
-    background-color: rgba(102, 102, 102, 0.35);
+    background-color: #101010;
 }
 
 .window-control .window-control-exit:hover {
-    background-color: rgb(220, 25, 25);
+    background-color: #DD0000;
 }
-
-/*  Taskbar  */
 
 .taskbar {
     color: white;
@@ -85,22 +81,26 @@
     background-color: #313C53;
 
 }
-
-/*   Table   */
-
-
-table.table {
-    background-color: #e7e7e7;
+.table {
+    color: white;
 }
 
 .table tr:nth-child(2n) {
-    background-color: #f9f9f9;
+    background-color: #3c3c3c;
+}
+
+.table tr {
+    /*background-color: black;*/
 }
 
 .table thead {
-    background-color: #d9d9d9;
-    color: #3e3e3e;
+    background-color: #111215;
+    color: white;
     border: none;
+}
+
+.table tr.error {
+    background-color: rgb(104, 34, 34);
 }
 
 table.table.selectable tr.selectedrow {
@@ -111,8 +111,6 @@ table.table.selectable tr.selectedrow {
 span.table-resize{
     background-color: #23262f;
 }
-
-/*  Menu Window  */
 
 .menu-window{
     background-color: white;
@@ -131,12 +129,16 @@ span.table-resize{
     background-color: #29292D;
 }
 
+.disabled {
+    color: darkgray;
+}
+
 /*  Controllers  */
 
 .gauge {
     /*  ring and labels  */
     color: darkgray;
-    /* needle color */    
+    /* needle color */
     border-color: red;
     /*  center  */
     background-color: darkgray;
@@ -144,7 +146,7 @@ span.table-resize{
 
 .line-chart {
     /*axes and labels*/
-    border-color: rgb(60, 60, 60);
+    border-color: white;
     /*grid*/
     color: rgba(100,100,100,0.3);
     /*marking fill*/
@@ -159,19 +161,20 @@ span.table-resize{
     background-color: red;
 }
 
+
 /* DataSourceAssignmentController */
 
 .dsaController-navwrapper {
-    border-top: solid 1px #ddd;
+    border-top: solid 1px #555;
 }
 
 
 /* lists */
 
 .comp-expList-clicker:hover {
-    background-color: #dbdbdb;
+    background-color: #4a4a4a;
 }
 
 .comp-expList ul {
-    background-color: #e6e6e6;
+    background-color: #202020;
 }
