--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
@@ -31,8 +31,8 @@
 
 .window-overlay {
     position: absolute;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     display: none;
@@ -178,3 +178,4 @@ span.table-resize{
 .comp-expList ul {
     background-color: #202020;
 }
+
