silhouettes and dsa

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
@@ -135,6 +135,11 @@ span.table-resize{
 
 /*  Controllers  */
 
+.silhouette {
+    fill: #272727;
+    transition: fill 0.3s;
+}
+
 .gauge {
     /*  ring and labels  */
     color: darkgray;
