--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style.css
@@ -133,6 +133,11 @@ span.table-resize{
 
 /*  Controllers  */
 
+.silhouette {
+    fill: #eaeaea;
+    transition: fill 0.3s;
+}
+
 .gauge {
     /*  ring and labels  */
     color: darkgray;
