--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
@@ -179,6 +179,9 @@ span.table-resize{
 .comp-expList-clicker:hover {
     background-color: #4a4a4a;
 }
+.comp-expList-clicker:active {
+    background-color: #424242;
+}
 
 .comp-expList ul {
     background-color: #202020;
