--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
@@ -218,7 +218,7 @@ table.table {
 }
 
 .table td, th {
-    padding: 5px;
+    padding: 10px;
 }
 
 /*table.table.selectable tr.selectedrow {
@@ -356,6 +356,7 @@ span.table-resize{
 .dsaController-contentwrapper {
     flex-grow: 1;
     position: relative;
+    display: flex;
 }
 
 .dsaController-navwrapper {
@@ -380,6 +381,10 @@ span.table-resize{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-grow: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .dsaController-left {
@@ -389,6 +394,19 @@ span.table-resize{
 .dsaController-right {
     flex-grow: 1;
     flex-basis: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.dsaController-emptyPage {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* DataSourceBuildController */
@@ -411,31 +429,41 @@ span.table-resize{
 /*Lists*/
 .listitem {
     display: block;
-    padding: 2px 0;
+    padding: 5px 5px;
 }
 
 .small {
     font-size: 0.6em;
 }
 
-.comp-button {
-    background-color: #444;
+.comp-button {    
     display: inline-block;
     padding: 3px 5px;
     margin: 1px;
     min-width: 70px;
     text-align: center;
-    min-height: 23px;
-    color: white;
-}
-
-.comp-button span {
-    vertical-align: middle;
+    min-height: 23px;    
 }
 
 .comp-button:hover {
     padding: 1px 3px;
     border: 2px solid darkgray;
+}
+
+.comp-button-disabled {    
+    display: inline-block;
+    padding: 3px 5px;
+    margin: 1px;
+    min-width: 70px;
+    text-align: center;
+    min-height: 23px;    
+}
+
+.comp-button span {
+    vertical-align: middle;
+}
+.comp-button-disabled span {
+    vertical-align: middle;
 }
 
 .comp-listBox {
@@ -488,7 +516,6 @@ span.table-resize{
 
 .comp-listBoxRearr {
     list-style: none;
-    max-width: 300px;
     padding: 0;
     margin: 0;
 }
